# fast-directional-chamfer-matching-cpp

./: CMakeLists.txt  README.md
Configs/: fitline_template.txt
DemoImage/: W.PGM  matching_target.PGM
Fdcm/: CMakeLists.txt  fdcm.cpp
Fitline/: CMakeLists.txt  LFLineFitter.cpp  fitline.cpp
Image/: CMakeLists.txt
release/: CMakeCache.txt  Makefile  cmake_install.cmake
release/Fdcm/: FdcmEXE  Makefile  cmake_install.cmake
release/Fitline/: FitlineEXE  Makefile  cmake_install.cmake  out_line.txt  output_edgeMap.pgm
release/Image/: Makefile  cmake_install.cmake
